# glib-mock

./: .editorconfig  Makefile  NEWS.md  README.md  glib-mock-run.py  meson.build  meson_options.txt
.github/workflows/: ci.yaml
doc/: glib-mock.toml.in  meson.build
src/: config.h.in  darwin-dl-preload.c  glib-mock-priv.c  glib-mock-priv.h  glib-mock-win32.c  glib-mock.c  glib-mock.h  linux-dl-preload.c  meson.build
tests/: bar.c  execv-bug.c  foo.c  meson.build  my-fwrite.c
tests/multiple-mocks/: bar.c  bar.h  foo.c  foo.h  main.c  meson.build
tests/unix/: meson.build  multiple-get-real-rt-dynamic-linked.c  repeated-multiple-get-real-rt-dynamic-linked.c  unmocked.c
tests/unix/deep-rt-dynamic-linked/: greeter.c  greeter.h  main.c
tests/unix/rt-dynamic-linked/: greeter.c  greeter.h  main.c
tests/win32/: meson.build  multiple-get-real-rt-dynamic-linked.c  repeated-multiple-get-real-rt-dynamic-linked.c  unmocked.c
tests/win32/deep-rt-dynamic-linked/: greeter.c  main.c  meson.build
tests/win32/rt-dynamic-linked/: greeter.c  main.c  meson.build
tests/wrap-function/: greeter.c  greeter.h  main.c  meson.build
